# klifurplanta

./: Cargo.toml  README.md  install-hooks.sh  json  prompt.txt
.cargo/: config.toml
docs/execution/: roadmap.md
levels/: coastal_cliffs_01.ron  iceland_glacier_01.ron  large_mountain_01.ron  tutorial_01.ron  volcanic_peaks_01.ron
scripts/: check-fast.sh  test-fast.sh
src/: components.rs  levels.rs  lib.rs  main.rs  resources.rs  states.rs  systems.rs
tests/: integration_tests.rs
