[package]
name = "mountain_climber"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (but not our code)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
