[package]
name = "mountain_climber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mountain_climber"
path = "src/main.rs"

[lib]
name = "mountain_climber"
path = "src/lib.rs"

[dependencies]
# Minimal Bevy configuration for faster compilation
bevy = { version = "0.14", default-features = false, features = [
    "dynamic_linking",
    "bevy_asset",
    "bevy_winit", 
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_state",
    "png"
] }
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"

[dev-dependencies]

# Enable fast development builds
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "unpacked" # Faster linking on Linux
incremental = true

# Enable high optimizations for dependencies (but not our code)
[profile.dev.package."*"]
opt-level = 3

# Fast compile profile for development
[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = false
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
